--- a/style.css
+++ b/style.css
@@ -265,5 +265,17 @@ h3{
     margin-bottom: 5px;
 
 }
+.icon-small2{
+    display:inline-block;
+    font-size: 120%;
+    color:rgb(228, 137, 18);
+    margin-right:20px;
+    vertical-align: middle;
+   
+    margin-bottom: 5px;
+
+}
+
 /*-------SECTION-------------*/
 
+/*-------SECTION-------------*//*-------SECTION-------------*/
